--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,28 +1,29 @@
-name: Java CI
+name: Backend CI
 
 on:
   push:
-    branches: [ main ]
+    paths:
+      - 'backend/**'
   pull_request:
-    branches: [ main ]
+    paths:
+      - 'backend/**'
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+      
+      - name: Set up Node.js (adjust if not Node)
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: '17'
+      - name: Install dependencies
+        working-directory: ./backend
+        run: npm install
 
-    - name: Build with Gradle
-      run: ./gradlew build --no-daemon
-
-    - name: Run tests
-      run: ./gradlew test --no-daemon
+      - name: Run tests
+        working-directory: ./backend
+        run: npm test
