--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -3,10 +3,10 @@ name: Backend CI
 on:
   push:
     paths:
-      - 'backend/**'
+      - '**'       # Or specify your relevant paths/files here
   pull_request:
     paths:
-      - 'backend/**'
+      - '**'
 
 jobs:
   build:
@@ -14,16 +14,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      
-      - name: Set up Node.js (adjust if not Node)
-        uses: actions/setup-node@v3
+
+      - name: Set up JDK 17  # Change if your project uses a different version
+        uses: actions/setup-java@v3
         with:
-          node-version: '16'
+          distribution: 'temurin'
+          java-version: '17'
 
-      - name: Install dependencies
-        working-directory: ./backend
-        run: npm install
-
-      - name: Run tests
-        working-directory: ./backend
-        run: npm test
+      - name: Build with Maven
+        run: ./mvnw clean install
