--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven Wrapper
+name: Backend CI
 
 on:
   push:
@@ -11,17 +11,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set execute permission for mvnw
+      - name: Make Maven Wrapper executable
         run: chmod +x ./mvnw
 
-      - name: Set up JDK 17
+      - name: Set up Java 21
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: temurin
+          java-version: 21
 
-      - name: Build with Maven Wrapper
+      - name: Build and test with Maven Wrapper
         run: ./mvnw clean install
